Retire competing flow setup owner and protect normal task saves